src/test/ui/issues/issue-44373.nll.stderr
error[E0714]: temporary value dropped while borrowed
  --> $DIR/issue-44373.rs:15:42
   |
LL |     let _val: &'static [&'static u32] = &[&FOO]; //~ ERROR borrowed value does not live long enough
   |                                          ^^^^^^ creates a temporary which is freed while still in use
LL | }
   | - temporary value is freed at the end of this statement
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0714`.
